pxc/tests/test_01_px/constmet8.px
namespace constmet8;
import common -;

import meta::common m;

function {f} m::rettype{f} apply(m::argtype{f, 0} x)
{
  return f(x);
}

struct foo {
	int x;
	function int n(int y) {
		int oldx = x;
		x = y;
		return oldx;
	}
	function int m(int y) const {
		function int nf(int z) {
			return apply{n}(z); // error
		}
		return nf(y);
	}
}

function void t1() {
  ptr{foo} v = ptr{foo}(foo(10));
  println(v->m(20));
}

t1();
